--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: ali@pwnworld$
+title: null@nothing $
 description: >- # this means to ignore newlines until "baseurl:"
-  Exploring kernel exploitation.
+  Exploring kernel exploitation and reverse engineering.
 
 # Build settings
 
